--- a/course-service/src/main/resources/application-gcp.properties
+++ b/course-service/src/main/resources/application-gcp.properties
@@ -2,3 +2,4 @@
 spring.datasource.host=104.198.193.214
 spring.datasource.port=3306
 spring.datasource.url=jdbc:mysql://${spring.datasource.host}:${spring.datasource.port}/eca_courses?createDatabaseIfNotExist=true
+spring.datasource.username=root
