Added hibernate dialect

--- a/course-service/src/main/resources/application-gcp.properties
+++ b/course-service/src/main/resources/application-gcp.properties
@@ -4,3 +4,5 @@ spring.datasource.port=3306
 spring.datasource.url=jdbc:mysql://${spring.datasource.host}:${spring.datasource.port}/eca_courses?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Mysql-eca#1234
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
